fix: update account deletion webhook and updated reffrer path in monday-connection-check middleware

--- a/src/templates/wrapper.hbs
+++ b/src/templates/wrapper.hbs
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{this.title}}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sakura.css/css/sakura.css" type="text/css">
-</head>
-<body>
-    <h1>LUCIE eQMS</h1>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sakura.css/css/sakura.css"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <h1>LUCIE eSQM</h1>
     <h1>{{this.title}}</h1>
     <p>{{this.description}}</p>
     {{{this.content}}}
-</body>
+  </body>
 </html>
